<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FDE92A"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <EditText
        android:id="@+id/registerUsernameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:id="@+id/registerPassView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@+id/registerUsernameView"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/registerContactView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact"
        android:layout_below="@+id/registerPassView"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/registerEmailView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@+id/registerContactView"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/registerLinkView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/link"
        android:layout_below="@+id/registerEmailView"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@+id/registerLinkView"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/regLoginView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerBtn"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:text="@string/login"
        android:textSize="18sp" />


</RelativeLayout>