<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FDE92A"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <AutoCompleteTextView
        android:id="@+id/loginUsernameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="170dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"/>

    <EditText
        android:id="@+id/loginPassView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@+id/loginUsernameView"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/loginPassView"
        android:layout_marginTop="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:text="@string/forgot_password"
        android:textSize="18sp" />
</RelativeLayout>