<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Review">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FDE92A"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <TextView
        android:id="@+id/reviewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/review"
        android:textSize="30sp"
        android:textStyle="bold" />
<RadioGroup
    android:id="@+id/reviewGroup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/reviewText"
    android:layout_marginTop="50dp"
    android:orientation="horizontal"
    android:layout_centerHorizontal="true">

    <RadioButton
        android:id="@+id/radioOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/daewoo"
        android:textSize="24sp" />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skyways"
        android:textSize="24sp"
        android:layout_marginRight="10dp"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/niazi"
        android:textSize="24sp"/>
</RadioGroup>

    <RatingBar
        android:id="@+id/reviewBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reviewGroup"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>